[package]
name = "cratesiomailtrans"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
clap = "2.33.0"

[badges]
github = { repository = "scattenlaeufer/cratesiomailtrans", workflow = "Rust checks" }
